<!-- Generated by Makefile on Tue Feb 28 12:36:39 PST 2017 -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.opentsdb</groupId>
  <artifactId>opentsdb</artifactId>
  <version>3.0.90-SNAPSHOT</version>
  <name>OpenTSDB</name>
  
  <organization>
    <name>The OpenTSDB Authors</name>
    <url>http://opentsdb.net</url>
  </organization>
  
  <description>
    OpenTSDB is a distributed, scalable Time Series Database (TSDB)
    written on top of HBase.  OpenTSDB was written to address a common need:
    store, index and serve metrics collected from computer systems (network
    gear, operating systems, applications) at a large scale, and make this
    data easily accessible and graphable.
  </description>
  
  <url>http://opentsdb.net</url>
  
  <licenses>
    <license>
      <name>LGPLv2.1+</name>
      <url>http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git@github.com:OpenTSDB/opentsdb.git</connection>
    <url>https://github.com/OpenTSDB/opentsdb</url>
  </scm>
  
  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/OpenTSDB/opentsdb/issues</url>
  </issueManagement>
  
  <mailingLists>
    <mailingList>
      <name>User List</name>
      <post>opentsdb@googlegroups.com</post>
      <subscribe>opentsdb+subscribe@googlegroups.com</subscribe>
      <unsubscribe>opentsdb+unsubscribe@googlegroups.com</unsubscribe>
      <archive>https://groups.google.com/group/opentsdb</archive>
    </mailingList>
  </mailingLists>
  
  <developers>
    <developer>
      <id>tsuna</id>
      <name>Benoit "tsuna" Sigoure</name>
      <email>tsunanet@gmail.com</email>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>-8</timezone>
    </developer>
    
    <developer>
      <id>manolama</id>
      <name>Chris Larsen</name>
      <email>clarsen@yahoo-inc.com</email>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>-8</timezone>
    </developer>
  </developers>
  
  <inceptionYear>2010</inceptionYear>

  <packaging>pom</packaging>

  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>9</version>
  </parent>

  <!-- OpenTSDB modules in build order. -->
  <modules>
    <module>common</module>
    <module>core</module>
    <module>executors/http</module>
    <module>implementation/athenz</module>
    <module>implementation/egads</module>
    <module>implementation/http-config</module>
    <module>implementation/elasticsearch</module>
    <module>implementation/okta</module>
    <module>implementation/prometheus</module>
    <module>implementation/prophet</module>
    <module>implementation/protobuf</module>
    <module>implementation/tracer-brave</module>
    <module>implementation/redis</module>
    <module>implementation/servlet</module>
    <module>implementation/server-undertow</module>
    <module>implementation/aws-secrets</module>
    <module>implementation/query-runner</module>
    <module>implementation/influx</module>
    <module>implementation/ultrabrew</module>
    <module>storage/asynchbase</module>
    <module>storage/bigtable</module>
    <module>storage/googlepubsub</module>
    <module>storage/kafka-0.8</module>
    <module>storage/pulsar</module>
    <module>distribution</module>
  </modules>

  <properties>
    <antlr4.version>4.9.3</antlr4.version>
    <apache.httpasyncclient.version>4.1.5</apache.httpasyncclient.version>
    <apache.httpclient.version>4.5.14</apache.httpclient.version>
    <bouncycastle.version>1.84</bouncycastle.version>
    <jackson.version>2.22.0</jackson.version>
    <log4j.version>2.26.0</log4j.version>
    <logback.version>1.2.13</logback.version>
    <maven.plugin.assembly.version>3.6.0</maven.plugin.assembly.version>
    <maven.plugin.jar.version>3.3.0</maven.plugin.jar.version>
    <maven.plugin.shade.version>3.5.1</maven.plugin.shade.version>
    <mockito.version>4.11.0</mockito.version>
    <powermock.version>1.6.2</powermock.version>
    <protobuf.version>3.25.9</protobuf.version>
    <slf4j.version>1.7.36</slf4j.version>

    <jvm.opens></jvm.opens>
  </properties>

  <!-- Dependencies shared by all (or most) modules in the OpenTSDB project. -->
  <dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.6.0-jre</version>
        </dependency>
        
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>log4j-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-api</artifactId>
          <version>${log4j.version}</version>
        </dependency>
        <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-core</artifactId>
          <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>${logback.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <!-- Unify ALL netty artifacts on one 4.1.x line. The codec/http/http2/handler
             jars (13 High CVEs) arrive at 4.1.59 via aws-sdk netty-nio-client 2.15.82
             (opentsdb-aura-aws); importing the BOM also removes the current
             4.1(codec)/4.2(common) split. 4.1.x targets Java 6+. -->
        <dependency>
          <groupId>io.netty</groupId>
          <artifactId>netty-bom</artifactId>
          <version>4.1.135.Final</version>
          <type>pom</type>
          <scope>import</scope>
        </dependency>
        
        <dependency>
          <groupId>com.stumbleupon</groupId>
          <artifactId>async</artifactId>
          <version>1.4.1</version>
        </dependency>
        
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
          <version>2.22</version> <!-- not same as other jackson artifacts... -->
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
          <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
          <version>${jackson.version}</version>
        </dependency>
        <dependency>
          <groupId>com.fasterxml.jackson.dataformat</groupId>
          <artifactId>jackson-dataformat-yaml</artifactId>
          <version>${jackson.version}</version>
        </dependency>
        <!-- Pin snakeyaml to the exact version jackson-dataformat-yaml 2.22.0 declares so it
             can't drift to a snapshot. -->
        <dependency>
          <groupId>org.yaml</groupId>
          <artifactId>snakeyaml</artifactId>
          <version>2.5</version>
        </dependency>

        <dependency>
            <groupId>org.openjdk.jol</groupId>
            <artifactId>jol-core</artifactId>
            <version>0.17</version>
        </dependency>

        <!-- Force fixed versions of transitives that land in the shipped lib/ (both stay Java 8):
             aerospike-client via opentsdb-aura-aerospike  -> CVE-2023-36480 (fixed 5.2.0)
             bcprov-jdk18on   via athenz/aura              -> GHSA-574f-3g2m-x479 (jdk18on = JDK 1.8+) -->
        <dependency>
            <groupId>com.aerospike</groupId>
            <artifactId>aerospike-client</artifactId>
            <version>5.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk18on</artifactId>
            <version>${bouncycastle.version}</version>
        </dependency>
        <!-- Match bcpkix/bcutil to the pinned bcprov (BC requires matching versions
             across the trio; they otherwise resolve to 1.78 via athenz-cert-refresher). -->
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk18on</artifactId>
            <version>${bouncycastle.version}</version>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcutil-jdk18on</artifactId>
            <version>${bouncycastle.version}</version>
        </dependency>
        <!-- egads shades org.json 20140107 (2 High); jedis already runs on 20251224,
             so aligning reactor-wide is safe (org.json API is stable back to 2014). -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20251224</version>
        </dependency>
        <!-- aura-aws drags in athenz-zts-java-client 1.10.11 (which bundles the vulnerable
             jackson 2.12.2 -> 7 High) while the rest of the athenz stack is 1.10.62. Align
             it to 1.10.62 so athenz is consistent. VERIFY the 1.10.62 client no longer
             bundles the old jackson; if it still does, a newer athenz line is required.
             1.10.x remains Java 8. -->
        <dependency>
            <groupId>com.yahoo.athenz</groupId>
            <artifactId>athenz-zts-java-client</artifactId>
            <version>1.10.62</version>
        </dependency>

        <!-- test dependencies -->
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>3.31.0-GA</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.objenesis</groupId>
            <artifactId>objenesis</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito</artifactId>
            <version>${powermock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>${powermock.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
        <configuration>
            <argLine>-Xmx1024m -XX:MaxMetaspaceSize=256m ${jvm.opens}</argLine>
            <reportsDirectory>../target/surefire-reports</reportsDirectory>
            <redirectTestOutputToFile>true</redirectTestOutputToFile>
        </configuration>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.12.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      
      <!-- Coveralls plugins -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
        <version>2.7</version>
        <configuration>
          <check>
            <!--TODO by qudongfang-->
          </check>
          <format>xml</format>
          <maxmem>256m</maxmem>
          <!-- aggregated reports for multi-module projects -->
          <aggregate>true</aggregate>
          <instrumentation>
            <excludes>
              <exclude>net/opentsdb/expressions/parser/*</exclude>
            </excludes>
          </instrumentation>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.7.0</version>
        <extensions>true</extensions>
        <configuration>
           <serverId>ossrh</serverId>
           <nexusUrl>https://oss.sonatype.org/</nexusUrl>
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
        </configuration>
      </plugin>
	  
	  <plugin>
	    <groupId>pl.project13.maven</groupId>
	    <artifactId>git-commit-id-plugin</artifactId>
	    <version>2.2.6</version>
	    <executions>
	      <execution>
	        <id>gitinfo</id>
	        <goals>
	          <goal>revision</goal>
	        </goals>
	      </execution>
	    </executions>
	    <configuration>
	      <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
	      <prefix>git</prefix>
	      <verbose>false</verbose>
	      <generateGitPropertiesFile>true</generateGitPropertiesFile>
	      <generateGitPropertiesFilename>${project.build.outputDirectory}/${artifactId}-version.json</generateGitPropertiesFilename>
	      <format>json</format>
	      <gitDescribe>
	        <skip>false</skip>
	        <always>false</always>
	        <dirty>-dirty</dirty>
	      </gitDescribe>
	    </configuration>
	  </plugin>
	  
      <plugin>
        <groupId>org.openrewrite.maven</groupId>
        <artifactId>rewrite-maven-plugin</artifactId>
        <version>6.41.0</version>
        <configuration>
          <exportDatatables>true</exportDatatables>
          <activeRecipes>
            <recipe>org.openrewrite.java.OrderImports</recipe>
            <recipe>org.openrewrite.java.testing.mockito.Mockito1to3Migration</recipe>
          </activeRecipes>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.openrewrite.recipe</groupId>
            <artifactId>rewrite-testing-frameworks</artifactId>
            <version>3.37.0</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>owasp-dep-check</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.owasp</groupId>
            <artifactId>dependency-check-maven</artifactId>
            <version>3.3.4</version>
            <configuration>
              <cveUrl12Modified>https://nvd.nist.gov/feeds/xml/cve/1.2/nvdcve-modified.xml.gz</cveUrl12Modified>
              <cveUrl20Modified>https://nvd.nist.gov/feeds/xml/cve/2.0/nvdcve-2.0-modified.xml.gz</cveUrl20Modified>
              <cveUrl12Base>https://nvd.nist.gov/feeds/xml/cve/1.2/nvdcve-%d.xml.gz</cveUrl12Base>
              <cveUrl20Base>https://nvd.nist.gov/feeds/xml/cve/2.0/nvdcve-2.0-%d.xml.gz</cveUrl20Base>
              <cveValidForHours>48</cveValidForHours>
              <failOnError>false</failOnError>
              <failBuildOnCVSS>5</failBuildOnCVSS>
              <outputDirectory>owaspreport</outputDirectory>
              <format>ALL</format>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>check</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
	</profile>
    <profile>
      <id>java9plus-opens</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <jvm.opens>--add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED -Dnet.bytebuddy.experimental=true</jvm.opens>
      </properties>
    </profile>
  </profiles>
</project>
